--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,19 +1,29 @@
 :root{
 	--background: #f5f5f5;
+	--dark:#25252540;
 	--first: #e0607e;
+}
+
 body  {
 	margin: 0px;
+	padding:0;
+	font-family:Helvetica, sans-serif;
 	height:100%;
 }
 
 header {
-	width: 100vw;
-	background-color:var(--background);
-	box-shadow: 0px 6px #9b9b9b36;
-	position:fixed;
-	top:0;
-	margin-bottom:10%;
+	width: 100%;
+	box-shadow: 0px 0.125rem 0.325rem #9b9b9b36;
+	display:flex;
+	justify-content:space-around;
+	align-items:center;
 }
+
+.nav_link_list{
+	list-style:none;
+	display:flex;
+	gap:10px;
+	}
 
 header p{
 	color:var(--first);
@@ -30,9 +40,7 @@ header strong{
 }
 
 main {
-	margin-top:8vh;
 	padding: 0% 1% 0 1%;
-	height:90vh;
 }
 
 a {
@@ -41,19 +49,38 @@ a {
 
 .box_container {
 	display:flex;
-	height:70%;
+	flex-direction:column;
+	height:90%;
 	justify-content:center;
-	gap:15px;
+	gap:25px;
+}
+
+.catch_text{
+	color:white;
+	font-weight:bold;
+	font-size:32px;
+	background-color: var(--dark);
+	width:100%;
+	text-align:center;
+}
+
+.container_title {
+	font-size:24px;
+	font-weight:bold ;
+	text-align:center;
+	}
+
+.card_container{
+	display:flex;
+	flex-direction:row;
+	gap:25px;
+	justify-content:center;
 }
 
 .card { 
-	width:22%;
-	max-width:300px;
-	height:30%;
-	max-height:400px;
-	box-shadow:5px 5px 5px var(--background); 
+	width:20%;
 	background-color:#f5f5f523;
-	border-radius: 5px;
+	border-radius: 10px;
 	border: 1px solid var(--background);
 }
 
@@ -61,9 +88,12 @@ a {
 	padding:2%;
 	font-weight:700;
 		color:black;
+		font-size:18px;
 	}
 
 .card img{
 	width:100%;
+	max-width:100%;
 	height:80%;
+	max-height:100%;
 }
