--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,7 @@
 :root{
-	--background: #f5f5f5;
-	--dark:#25252540;
+	--background: #c5c5c5;
+	--dark:#25252580;
+	--light:#d3d3d3;
 	--first: #e0607e;
 }
 
@@ -39,9 +40,6 @@ header strong{
 	text-align:center;
 }
 
-main {
-	padding: 0% 1% 0 1%;
-}
 
 a {
 	text-decoration:none;
@@ -80,20 +78,98 @@ a {
 .card { 
 	width:20%;
 	background-color:#f5f5f523;
-	border-radius: 10px;
-	border: 1px solid var(--background);
+	border-top-right-radius: 10px;
+	border-top-left-radius: 10px;
 }
 
 .card_title{
-	padding:2%;
+	padding:0 1vh 0 1vh;
 	font-weight:700;
-		color:black;
-		font-size:18px;
+	gap:5px;
+	display:flex;
+	flex-direction:column;
+	color:black;
+	font-size:22px;
 	}
+
+.card_title p{
+	margin:0;
+	padding:0;
+}
 
 .card img{
 	width:100%;
 	max-width:100%;
 	height:80%;
+	border-top-right-radius:10px;
+	border-top-left-radius:10px;
 	max-height:100%;
 }
+
+.recipe_tag { 
+	font-size:15px;
+	padding-top:1%;
+	font-weight:500;
+	font-style:italic;
+	color:var(--dark);
+}
+
+.recipe_container{
+	background-color:var(--light);
+	color:white;
+	display: flex;
+	justify-content:center;
+	align-items:center;
+	gap:2%;
+}
+
+.recipe_container img{
+	width:30vw;
+	max-width:500px;
+}
+
+.recipe_desc {
+	font-weight: 400;
+	font-size: 20px;
+	color:black;
+	padding-right:2%;
+}
+.recipe_content {
+	padding:0 1% 0 1%;
+	margin: 0 0 1% 0;
+	display:flex;
+	flex-direction: column;
+	gap: 10px;
+	align-content:center;
+	flex-wrap: wrap;
+}
+
+.recipe_content p{
+	font-weight:800;
+	font-size:23px;
+}
+
+.button_return {
+	background-color:var(--first);
+	width:15%;
+	padding:8px;
+	font-size:15px;
+	font-weight:600;
+}
+
+.button_return a {
+	color:white;
+}
+
+#ps {
+	font-style: italic;
+	color:var(--dark);
+	font-weight:400;
+	font-size:14px;
+}
+
+#about_page {
+	margin: 0 5% 0 5%;
+	width:80%;
+}
+
