--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,8 +11,18 @@
 body  {
 	margin: 0px;
 	padding:0;
-	font-family:Helvetica, sans-serif;
 	height:100%;
+	display:flex;
+	flex-direction:column;
+	font-family: Roboto, sans-serif;
+}
+
+body a{
+	text-decoration:none;
+}
+
+body li {
+	list-style:none;
 }
 
 header {
@@ -51,7 +61,6 @@ a {
 .box_container {
 	display:flex;
 	flex-direction:column;
-	height:90%;
 	justify-content:center;
 	gap:50px;
 }
@@ -121,7 +130,7 @@ a {
 	display: flex;
 	justify-content:center;
 	align-items:center;
-	gap:2%;
+	gap:5%;
 }
 
 
@@ -134,7 +143,6 @@ a {
 	font-weight: 400;
 	font-size: 20px;
 	color:black;
-	padding-right:2%;
 }
 .recipe_content {
 	padding:0 1% 0 1%;
@@ -166,7 +174,7 @@ a {
 }
 
 .button {
-	padding:8px;
+	padding:5px;
 	font-size:16px;
 	font-weight:800;
 	border-radius:12px;
@@ -194,4 +202,45 @@ a {
 #odin_choice {
 	background-color:var(--fourth);
 	font-size:24px;
+	height:100%;
+}
+
+#odin_title{ 
+	font-size:26px;
+}
+
+
+#odin_choice.recipe_desc {
+	text-align:center;
+}
+
+footer {
+	background-color: var(--second);
+	display:flex;
+	flex-direction:column;
+	color:white;
+}
+
+.footer_links a {
+	color:white
+}
+
+.footer_container {
+	text-align:center;
+}
+
+.footer_links{
+	display:flex;
+	flex-direction:column;
+	padding:0;
+	justify-content:center;
+	align-items:center;
+}
+
+.footer_links p {
+	font-weight:800;
+	}
+
+main {
+	flex:1 0 95vh;
 }
